1.999817 Not Released

 * Add buparrow() and uparrow() for Knuth's up-arrow notation.

 * Add information about the github repository.

 * Update links in SUPPORT section in POD.

 * Fix bpow(). It returned NaN when it should truncate to zero.

 * Make blsft() in Math::BigInt allow bases up until the largest unsigned
   integer.

 * Make _lsft() in Math::BigInt::Calc handle an arbitrarily large base.

 * Add new methods bdigitsum() and digitsum() to Math::BigInt. Add new method
   _digitsum() to Math::BigInt::Lib.

 * Add new methods is_non_negative() and is_non_positive().

 * Extend the default collation sequence used by to_base() and from_base() to
   all the 94 printable ASCII characters except blank/space.

1.999816 2018-10-26

 * bnok() for Math::BigInt and Math::BigFloat now support the full Kronenburg
   extension. The behaviour is identical to the behaviour of the Maple and
   Mathematica function for negative integers n, k. Add tests. This closes CPAN
   RT #95628.

 * Fix POD errors. This closes CPAN RT #125141.

1.999815 2018-10-19

 * Move bitwise operators signed and, signed or, and signed xor from
   lib/Math/BigInt/CalcEmu.pm into lib/Math/BigInt/Lib.pm. The file
   lib/Math/BigInt/CalcEmu.pm is no longer needed and thus removed.

1.999814 2018-10-01

 * Add to_base() and from_base() to Math::BigInt and corresponding library
   methods _to_base() and _from_base() to Math::BigInt::Lib. This was inspired
   by CPAN RT #122681.

 * Fix Makefile.PL to reflect that Test::More is only needed for testing, not
   for building.

 * In the documentation for each of the to_(bin|hex|oct|bytes) methods, add a
   reference to the corresponding from_(bin|hex|oct|bytes) method.

1.999813 2018-04-18

 * Fix CPAN RT #125108. Remove test files try.pl, t/author-bpi-big-mbf.t, and
   t/release-unused-vars.t, which were included in the 1.999812 distribution by
   accident.

1.999812 2018-04-17

 * Fix CPAN RT #120351 regarding bpow(). Add test.
